// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with color, size, and fill props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "black",
      "borderColor": "",
      "borderRadius": 5,
      "borderWidth": 0,
      "height": 45,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 10,
      "width": "50%",
    }
  }
>
  Snapshot test with props!
</View>
`;

exports[`renders correctly with default props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "black",
      "borderColor": "",
      "borderRadius": 5,
      "borderWidth": 0,
      "height": 45,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 10,
      "width": "50%",
    }
  }
>
  Snapshot test!
</View>
`;

exports[`renders correctly with extraStyles 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "green",
      "borderColor": "",
      "borderRadius": 5,
      "borderWidth": 0,
      "height": 45,
      "justifyContent": "center",
      "opacity": 1,
      "padding": 10,
      "paddingHorizontal": 18,
      "paddingVertical": 10,
      "width": "50%",
    }
  }
>
  Styled Button
</View>
`;
